contact us updated

--- a/html/update-contact-details.html
+++ b/html/update-contact-details.html
@@ -467,7 +467,7 @@
                     <div class="col-lg-8 col-md-6 col-sm-6 col-xs-12 display-table">
                         <div class="display-table-cell vertical-align-middle text-left xs-text-center">
                             <!-- start page title -->
-                            <h1 class="alt-font text-extra-dark-gray font-weight-600 no-margin-bottom text-uppercase">Contact us classic</h1>
+                            <h1 class="alt-font text-extra-dark-gray font-weight-600 no-margin-bottom text-uppercase">Contact us</h1>
                             <!-- end page title -->
                         </div>
                     </div>
@@ -558,7 +558,7 @@ form</h2>
                 <div class="row">
                     <div class="col-lg-6 col-md-6 col-sm-8 col-xs-12 center-col margin-eight-bottom sm-margin-40px-bottom xs-margin-30px-bottom text-center last-paragraph-no-margin">
                         <h5 class="alt-font font-weight-700 text-extra-dark-gray text-uppercase">Update company contact details</h5>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since. Lorem Ipsum has been the industry. Lorem Ipsum is simply dummy text.</p>
+<!--                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since. Lorem Ipsum has been the industry. Lorem Ipsum is simply dummy text.</p>-->
                     </div>  
                 </div>
                 <form id="project-contact-form" action="javascript:void(0)" method="post">
@@ -934,7 +934,7 @@ form</h2>
                                 <li><a class="facebook" href="http://facebook.com" target="_blank"><i class="fa fa-facebook"></i><span></span></a></li>
                                 <li><a class="twitter" href="http://twitter.com" target="_blank"><i class="fa fa-twitter"></i><span></span></a></li>
                                 <li><a class="google" href="http://google.com" target="_blank"><i class="fa fa-google"></i><span></span></a></li>
-                                <li><a class="dribbble" href="http://dribbble.com" target="_blank"><i class="fa fa-dribbble"></i><span></span></a></li>
+<!--                                <li><a class="dribbble" href="http://dribbble.com" target="_blank"><i class="fa fa-dribbble"></i><span></span></a></li>-->
                                 <li><a class="linkedin" href="http://linkedin.com" target="_blank"><i class="fa fa-linkedin "></i><span></span></a></li>
                             </ul>
                         </div>
