--- a/html/index.html
+++ b/html/index.html
@@ -1420,7 +1420,7 @@
 Our team of experienced multimedia producers and storytellers offer a new angle on the issues of the day, and share insights from trusted commentators across diverse sectors, including financial markets, technology, professional services and lifestyle.
 
 We're constantly on the look out for new stories and new ways to tell them, so if you have a tip off, we'd love to hear from you.</p>
-                        <a class="btn btn-dark-gray btn-small" href="https://themeforest.net/user/themezaa/portfolio?ref=themezaa">Discover Theme</a>
+<!--                        <a class="btn btn-dark-gray btn-small" href="https://themeforest.net/user/themezaa/portfolio?ref=themezaa">Discover Theme</a>-->
                     </div>
                     <div class="col-md-8 col-xs-12 sm-no-padding-lr">
                         <div class="padding-seven-lr pull-left sm-no-padding-lr col-2-nth">
@@ -1557,7 +1557,7 @@ We're constantly on the look out for new stories and new ways to tell them, so i
             <div class="container-fluid">
                 <div class="row equalize">
                     <!-- start box item -->
-                    <div class="col-md-4 no-padding cover-background position-relative wow fadeIn sm-height-400px xs-height-350px" style="background-image: url(images/img/parallax-bg9.jpg")>
+                    <div class="col-md-4 no-padding cover-background position-relative wow fadeIn sm-height-400px xs-height-350px" style="background: black;")>
                         <div class="opacity-medium bg-extra-dark-gray" style="opacity: 0.75!important;"></div>
                         <div class="display-table width-100 height-100 position-relative sm-margin-auto sm-width-70 xs-width-90">
                             <div class="display-table-cell vertical-align-middle padding-twelve-all sm-padding-five-all sm-text-center">
@@ -1604,7 +1604,7 @@ We're constantly on the look out for new stories and new ways to tell them, so i
                     </div>
                     <!-- end box item -->
                     <!-- start box item -->
-                    <div class="col-md-4 no-padding cover-background position-relative wow fadeIn sm-height-400px" style="background-image: url(images/img/parallax-bg10.jpg);">
+                    <div class="col-md-4 no-padding cover-background position-relative wow fadeIn sm-height-400px" style="background: black;">
                         <div class="opacity-medium bg-extra-dark-gray" style="opacity: 0.75!important;"></div>
                         <div class="display-table width-100 height-100 position-relative sm-margin-auto sm-width-70 xs-width-90">
                             <div class="display-table-cell vertical-align-middle padding-twelve-all sm-padding-five-all sm-text-center">
@@ -1731,7 +1731,7 @@ We're constantly on the look out for new stories and new ways to tell them, so i
                         <!-- start about -->
                         <div class="col-md-3 col-sm-6 col-xs-12 widget sm-margin-30px-bottom xs-text-center">
                             <div class="widget-title alt-font text-small text-medium-gray text-uppercase margin-15px-bottom font-weight-600">About Agency</div>
-                            <p class="text-small width-95 xs-width-100 no-margin">Boardroom.Media is a leading digital communications company. We offer a complete range of corporate digital streaming solutions including audio and video webcasting to help you communicate effectively to larger audiences.
+                            <p class="text-small width-95 xs-width-100 no-margin footer-text-p">Boardroom.Media is a leading digital communications company. We offer a complete range of corporate digital streaming solutions including audio and video webcasting to help you communicate effectively to larger audiences.
                                 .</p>
                         </div>
                         <!-- end about -->
@@ -1793,7 +1793,7 @@ We're constantly on the look out for new stories and new ways to tell them, so i
                 <div class="footer-bottom border-top border-color-medium-dark-gray padding-30px-top">
                     <div class="row">
                         <!-- start copyright -->
-                        <div class="col-md-6 col-sm-6 col-xs-12 text-left text-small xs-text-center">BROADROOM - Portfolio Concept Theme</div>
+                        <div class="col-md-6 col-sm-6 col-xs-12 text-left text-small xs-text-center">BROADROOM - Australian Based Company</div>
                         <div class="col-md-6 col-sm-6 col-xs-12 text-right text-small xs-text-center">&COPY; 2018 BROADROOM is Proudly Powered by <a href="http://www.themezaa.com" target="_blank" title="ThemeZaa">BROADROOM</a></div>
                         <!-- end copyright -->
                     </div>
