--- a/html/update-contact-details.html
+++ b/html/update-contact-details.html
@@ -477,7 +477,7 @@
                             <ul class="xs-text-center">
                                 <li><a href="#" class="text-dark-gray">Pages</a></li>
                                 <li><a href="#" class="text-dark-gray">Contact</a></li>
-                                <li class="text-dark-gray">Contact us classic</li>
+                                <li class="text-dark-gray">Contact us</li>
                             </ul>
                             <!-- end breadcrumb -->
                         </div>
@@ -951,7 +951,7 @@ form</h2>
                             <!-- start logo -->
                             <a href="index.html" class="margin-20px-bottom display-inline-block"><img class="footer-logo" src="images/img/53a1dc_26b5ffa1cb7a47b1b716d577935a2046_mv1.png" data-at2x="images/logo-white@2x.png" alt="BOARDROOM" style="width: 200px;"></a>
                             <!-- end logo -->
-                            <p class="text-small width-95 xs-width-100">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                            <p class="text-small width-95 xs-width-100 footer-text-p">Boardroom.Media is a leading digital communications company. We offer a complete range of corporate digital streaming solutions including audio and video webcasting to help you communicate effectively to larger audiences.</p>
                             <!-- start social media -->
                             <div class="social-icon-style-8 display-inline-block vertical-align-middle">
                                 <ul class="small-icon no-margin-bottom">
@@ -967,21 +967,21 @@ form</h2>
                         <div class="col-md-3 col-sm-6 col-xs-12 widget border-right border-color-medium-dark-gray padding-45px-left sm-padding-15px-left sm-no-border-right sm-margin-30px-bottom xs-text-center">
                             <div class="widget-title alt-font text-small text-medium-gray text-uppercase margin-10px-bottom font-weight-600">Additional Links</div>
                             <ul class="list-unstyled">
-                                <li><a class="text-small" href="index.html">Home Classic Corporate</a></li>
-                                <li><a class="text-small" href="home-creative-business.html">Home Creative Business</a></li>
-                                <li><a class="text-small" href="home-creative-designer.html">Home Creative Designer</a></li>
-                                <li><a class="text-small" href="home-portfolio-minimal.html">Home Portfolio Minimal</a></li>
-                                <li><a class="text-small" href="home-portfolio-parallax.html">Home Portfolio  parallax</a></li>
-                                <li><a class="text-small" href="home-portfolio-personal.html">Home Portfolio Personal</a></li>
+                                <li><a class="text-small" href="index.html">Link1</a></li>
+                                <li><a class="text-small" href="update-contact-details.html">Link2</a></li>
+                                <li><a class="text-small" href="update-contact-details.html">Link3</a></li>
+                                <li><a class="text-small" href="update-contact-details.html">Link4</a></li>
+                                <li><a class="text-small" href="update-contact-details.html">Link5</a></li>
+                                <li><a class="text-small" href="update-contact-details.html">Link6</a></li>
                             </ul>
                         </div>
                         <!-- end additional links -->
                         <!-- start contact information -->
                         <div class="col-md-3 col-sm-6 col-xs-12 widget border-right border-color-medium-dark-gray padding-45px-left sm-padding-15px-left sm-clear-both sm-no-border-right  xs-margin-30px-bottom xs-text-center">
                             <div class="widget-title alt-font text-small text-medium-gray text-uppercase margin-10px-bottom font-weight-600">Contact Info</div>
-                            <p class="text-small display-block margin-15px-bottom width-80 xs-center-col">Boardroom<br> 301 The Greenhouse, Custard Factory, London, E2 8DY.</p>
-                            <div class="text-small">Email: <a href="mailto:sales@domain.com">sales@domain.com</a></div>
-                            <div class="text-small">Phone: +44 (0) 123 456 7890</div>
+                            <p class="text-small display-block margin-15px-bottom width-80 xs-center-col">Boardroom<br> Suite 4, Level 17 227 Elizabeth Street Sydney NSW 2000 Australia</p>
+                            <div class="text-small">Email: <a href="mailto:sales@domain.com">info@boardroom.media</a></div>
+                            <div class="text-small">Phone: +61 2 9339 6555</div>
                             <a href="contact-us-modern.html" class="text-small text-uppercase text-decoration-underline">View Direction</a>
                         </div>
                         <!-- end contact information -->
