--- a/html/book-an-event.html
+++ b/html/book-an-event.html
@@ -449,9 +449,9 @@
                                 </form>
                             </div>
                             <div class="header-social-icon xs-display-none">
-                                <a href="https://www.facebook.com/" title="Facebook" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                                <a href="https://twitter.com/" title="Twitter" target="_blank"><i class="fa fa-twitter"></i></a>
-<!--                                <a href="https://dribbble.com/" title="Dribbble" target="_blank"><i class="fa fa-dribbble"></i></a>                          -->
+                                <a href="https://www.facebook.com/boardroommedia" title="Facebook" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                                <a href="https://twitter.com/boardroom_media" title="Twitter" target="_blank"><i class="fa fa-twitter"></i></a>
+                                <a href="https://www.linkedin.com/company/1006749/" title="Dribbble" target="_blank"><i class="fa fa-linkedin"></i></a>                          
                             </div>
                         </div>
                     </div>
@@ -818,11 +818,11 @@
                         <span class="text-medium font-weight-600 text-uppercase display-block alt-font text-extra-dark-gray margin-30px-bottom">On social networks</span>
                         <div class="social-icon-style-4">
                             <ul class="margin-30px-top large-icon">
-                                <li><a class="facebook" href="http://facebook.com" target="_blank"><i class="fa fa-facebook"></i><span></span></a></li>
-                                <li><a class="twitter" href="http://twitter.com" target="_blank"><i class="fa fa-twitter"></i><span></span></a></li>
-                                <li><a class="google" href="http://google.com" target="_blank"><i class="fa fa-google"></i><span></span></a></li>
+                                <li><a class="facebook" href="https://www.facebook.com/boardroommedia" target="_blank"><i class="fa fa-facebook"></i><span></span></a></li>
+                                <li><a class="twitter" href="https://twitter.com/boardroom_media" target="_blank"><i class="fa fa-twitter"></i><span></span></a></li>
+                                <li><a class="google" href="https://plus.google.com/110387173875767076117" target="_blank"><i class="fa fa-google"></i><span></span></a></li>
 <!--                                <li><a class="dribbble" href="http://dribbble.com" target="_blank"><i class="fa fa-dribbble"></i><span></span></a></li>-->
-                                <li><a class="linkedin" href="http://linkedin.com" target="_blank"><i class="fa fa-linkedin "></i><span></span></a></li>
+                                <li><a class="linkedin" href="https://www.linkedin.com/company/1006749/" target="_blank"><i class="fa fa-linkedin "></i><span></span></a></li>
                             </ul>
                         </div>
                     </div>
@@ -842,10 +842,10 @@
                             <!-- start social media -->
                             <div class="social-icon-style-8 display-inline-block vertical-align-middle">
                                 <ul class="small-icon no-margin-bottom">
-                                    <li><a class="facebook text-white" href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                                    <li><a class="twitter text-white" href="https://twitter.com/" target="_blank"><i class="fa fa-twitter"></i></a></li>
-                                    <li><a class="google text-white" href="https://plus.google.com" target="_blank"><i class="fa fa-google-plus"></i></a></li>
-                                    <li><a class="instagram text-white" href="https://instagram.com/" target="_blank"><i class="fa fa-instagram no-margin-right" aria-hidden="true"></i></a></li>
+                                    <li><a class="facebook text-white" href="https://www.facebook.com/boardroommedia" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                                    <li><a class="twitter text-white" href="https://twitter.com/boardroom_media" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                                    <li><a class="google text-white" href="https://plus.google.com/110387173875767076117" target="_blank"><i class="fa fa-google-plus"></i></a></li>
+                                    <li><a class="instagram text-white" href="https://www.linkedin.com/company/1006749/" target="_blank"><i class="fa fa-linkedin no-margin-right" aria-hidden="true"></i></a></li>
                                 </ul>
                             </div>
                             <!-- end social media -->
