--- a/html/request-a-call.html
+++ b/html/request-a-call.html
@@ -449,9 +449,9 @@
                                 </form>
                             </div>
                             <div class="header-social-icon xs-display-none">
-                                <a href="https://www.facebook.com/" title="Facebook" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                                <a href="https://twitter.com/" title="Twitter" target="_blank"><i class="fa fa-twitter"></i></a>
-                                <a href="https://dribbble.com/" title="Dribbble" target="_blank"><i class="fa fa-dribbble"></i></a>                          
+                                <a href="https://www.facebook.com/boardroommedia" title="Facebook" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                                <a href="https://twitter.com/boardroom_media" title="Twitter" target="_blank"><i class="fa fa-twitter"></i></a>
+                                <a href="https://www.linkedin.com/company/1006749/" title="linkedin" target="_blank"><i class="fa fa-linkedin"></i></a>                          
                             </div>
                         </div>
                     </div>
@@ -625,10 +625,10 @@
                             <!-- start social media -->
                             <div class="social-icon-style-8 display-inline-block vertical-align-middle">
                                 <ul class="small-icon no-margin-bottom">
-                                    <li><a class="facebook text-white" href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                                    <li><a class="twitter text-white" href="https://twitter.com/" target="_blank"><i class="fa fa-twitter"></i></a></li>
-                                    <li><a class="google text-white" href="https://plus.google.com" target="_blank"><i class="fa fa-google-plus"></i></a></li>
-                                    <li><a class="instagram text-white" href="https://instagram.com/" target="_blank"><i class="fa fa-instagram no-margin-right" aria-hidden="true"></i></a></li>
+                                    <li><a class="facebook text-white" href="https://www.facebook.com/boardroommedia" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                                    <li><a class="twitter text-white" href="https://twitter.com/boardroom_media" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                                    <li><a class="google text-white" href="https://plus.google.com/110387173875767076117" target="_blank"><i class="fa fa-google-plus"></i></a></li>
+                                    <li><a class="instagram text-white" href="https://www.linkedin.com/company/1006749/" target="_blank"><i class="fa fa-linkedin no-margin-right" aria-hidden="true"></i></a></li>
                                 </ul>
                             </div>
                             <!-- end social media -->
