motion graphics page

--- a/html/book-an-event.html
+++ b/html/book-an-event.html
@@ -187,7 +187,7 @@
                                         </li>
 
                                         <li class="dropdown">
-                                            <a class="dropdown-toggle" data-toggle="dropdown" href="Javascript: void(0);">Motion Graphics</a>
+                                            <a class="dropdown-toggle" data-toggle="dropdown" href="motion-graphics.html">Motion Graphics</a>
                                             <!--
                                                 <ul class="dropdown-menu">
                                                     <li><a href="team-simple.html">Team simple</a></li>
