--- a/html/index.html
+++ b/html/index.html
@@ -144,7 +144,7 @@
                                         </li>
 
                                         <li class="dropdown">
-                                            <a class="dropdown-toggle" data-toggle="dropdown" href="Javascript: void(0);">Motion Graphics</a>
+                                            <a class="dropdown-toggle" data-toggle="dropdown" href="motion-graphics.html">Motion Graphics</a>
 
                                         </li>
 
@@ -538,14 +538,26 @@
                 <div class="col-md-12" style="margin-bottom: 50px;">
                     <h5 class="alt-font text-extra-dark-gray font-weight-600 width-60 margin-lr-auto  md-width-80 xs-width-100" style="text-align:  center; color: #ff214f; padding-top: 40px;">OUR CLIENTS</h5>
                     <!-- start filter navigation -->
-                    <!-- <ul class="portfolio-filter nav nav-tabs border-none portfolio-filter-tab-1 font-weight-600 alt-font text-uppercase text-center margin-80px-bottom text-small sm-margin-40px-bottom xs-margin-20px-bottom">
-                            <li class="nav active"><a href="javascript:void(0);" data-filter="*" class="xs-display-inline light-gray-text-link text-very-small">All</a></li>
-                            <li class="nav"><a href="javascript:void(0);" data-filter=".web" class="xs-display-inline light-gray-text-link text-very-small">Web</a></li>
-                            <li class="nav"><a href="javascript:void(0);" data-filter=".advertising" class="xs-display-inline light-gray-text-link text-very-small">Advertising</a></li>
-                            <li class="nav"><a href="javascript:void(0);" data-filter=".branding" class="xs-display-inline light-gray-text-link text-very-small">Branding</a></li>
-                            <li class="nav"><a href="javascript:void(0);" data-filter=".design" class="xs-display-inline light-gray-text-link text-very-small">Design</a></li>
-                            <li class="nav"><a href="javascript:void(0);" data-filter=".photography" class="xs-display-inline light-gray-text-link text-very-small">Photography</a></li>
-                        </ul>                                                                            -->
+                    <ul class="portfolio-filter nav nav-tabs border-none portfolio-filter-tab-1 font-weight-600 alt-font text-uppercase text-center margin-80px-bottom text-small sm-margin-40px-bottom xs-margin-20px-bottom">
+                        <li class="nav active">
+                            <a href="javascript:void(0);" data-filter="*" class="xs-display-inline light-gray-text-link text-very-small">All</a>
+                        </li>
+                        <li class="nav">
+                            <a href="javascript:void(0);" data-filter=".web" class="xs-display-inline light-gray-text-link text-very-small">Web</a>
+                        </li>
+                        <li class="nav">
+                            <a href="javascript:void(0);" data-filter=".advertising" class="xs-display-inline light-gray-text-link text-very-small">Advertising</a>
+                        </li>
+                        <li class="nav">
+                            <a href="javascript:void(0);" data-filter=".branding" class="xs-display-inline light-gray-text-link text-very-small">Branding</a>
+                        </li>
+                        <li class="nav">
+                            <a href="javascript:void(0);" data-filter=".design" class="xs-display-inline light-gray-text-link text-very-small">Design</a>
+                        </li>
+                        <li class="nav">
+                            <a href="javascript:void(0);" data-filter=".photography" class="xs-display-inline light-gray-text-link text-very-small">Photography</a>
+                        </li>
+                    </ul>
                     <!-- end filter navigation -->
                 </div>
             </div>
@@ -600,6 +612,28 @@
                             </li>
                             <!-- end portfolio item -->
                             <!-- start portfolio item -->
+                            <li class="grid-item advertising branding design photography fadeInUp" data-wow-delay="0.6s" style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInUp; position: absolute; left: 74.9522%; top: 0px;">
+                                <a href="https://players.brightcove.net/756700387001/rJ074mNTb_default/index.html?videoId=5659871482001" target="_blank">
+                                    <figure>
+                                        <div class="portfolio-img">
+                                            <img src="images/img/agri-digital2.jpg" alt="" data-no-retina="">
+                                        </div>
+                                        <figcaption>
+                                            <div class="portfolio-hover-main text-center last-paragraph-no-margin">
+                                                <div class="portfolio-hover-box vertical-align-middle">
+                                                    <div class="portfolio-hover-content position-relative">
+                                                        <span class="font-weight-600 alt-font text-uppercase margin-one-bottom display-block text-extra-dark-gray">Agri Digital</span>
+                                                        <p class="text-medium-gray text-uppercase text-extra-small">Trust & Transparency for Global Agricultural Supply Chains</p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </figcaption>
+                                    </figure>
+                                </a>
+                            </li>
+
+                            <!-- end portfolio item -->
+                            <!-- start portfolio item -->
                             <li class="grid-item web branding design photography fadeInUp" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInUp; position: absolute; left: 49.9681%; top: 0px;">
                                 <a href="https://players.brightcove.net/756700387001/default_default/index.html?videoId=5734185887001" target="_blank">
                                     <figure>
@@ -619,27 +653,8 @@
                                     </figure>
                                 </a>
                             </li>
-                            <!-- end portfolio item -->
-                            <!-- start portfolio item -->
-                            <li class="grid-item advertising branding design photography fadeInUp" data-wow-delay="0.6s" style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInUp; position: absolute; left: 74.9522%; top: 0px;">
-                                <a href="https://players.brightcove.net/756700387001/rJ074mNTb_default/index.html?videoId=5659871482001" target="_blank">
-                                    <figure>
-                                        <div class="portfolio-img">
-                                            <img src="images/img/agri-digital.jpg" alt="" data-no-retina="">
-                                        </div>
-                                        <figcaption>
-                                            <div class="portfolio-hover-main text-center last-paragraph-no-margin">
-                                                <div class="portfolio-hover-box vertical-align-middle">
-                                                    <div class="portfolio-hover-content position-relative">
-                                                        <span class="font-weight-600 alt-font text-uppercase margin-one-bottom display-block text-extra-dark-gray">Agri Digital</span>
-                                                        <p class="text-medium-gray text-uppercase text-extra-small">Trust & Transparency for Global Agricultural Supply Chains</p>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </figcaption>
-                                    </figure>
-                                </a>
-                            </li>
+
+
                             <!-- end portfolio item -->
                             <!-- start portfolio item -->
                             <li class="grid-item web branding design fadeInUp" style="visibility: visible; animation-name: fadeInUp; position: absolute; left: 0%; top: 392px;">
