--- a/html/AGM-webcasting.html
+++ b/html/AGM-webcasting.html
@@ -149,7 +149,7 @@
                                         </li>
 
                                         <li class="dropdown">
-                                            <a class="dropdown-toggle" data-toggle="dropdown" href="Javascript: void(0);">Motion Graphics</a>
+                                            <a class="dropdown-toggle" data-toggle="dropdown" href="motion-graphics.html">Motion Graphics</a>
 
                                         </li>
 
