--- a/html/update-contact-details.html
+++ b/html/update-contact-details.html
@@ -181,7 +181,7 @@
                                         </li>
 
                                         <li class="dropdown">
-                                            <a class="dropdown-toggle" data-toggle="dropdown" href="Javascript: void(0);">Motion Graphics</a>
+                                            <a class="dropdown-toggle" data-toggle="dropdown" href="motion-graphics.html">Motion Graphics</a>
 
                                         </li>
 
