updated motion graphics

--- a/html/motion-graphics.html
+++ b/html/motion-graphics.html
@@ -228,7 +228,7 @@
         <div class="container-fluid">
 
             <div class="row equalize sm-equalize-auto">
-                <div class="col-md-6 col-sm-12 col-xs-12 cover-background sm-height-500px xs-height-350px wow fadeIn" style="background-image:url('images/motion-graphics.gif')">
+                <div class="col-md-6 col-sm-12 col-xs-12 cover-background sm-height-500px xs-height-350px wow fadeIn" style="background-image:url('images/motion-graphics1.gif')">
                 </div>
                 <div class="swiper-full-screen swiper-container col-md-6 col-sm-12 col-xs-12 no-padding-lr white-move bg-extra-dark-gray text-center xs-padding-20px-tb wow fadeIn">
                     <div class="swiper-wrapper">
@@ -237,14 +237,14 @@
                             <div class="padding-eighteen-all md-padding-eight-all xs-padding-15px-lr">
                                 <div class="margin-30px-bottom text-center position-relative">
                                     <span class="title-large alt-font font-weight-100 text-dark-gray opacity4">01</span>
-                                    <p class="alt-font font-weight-600 text-deep-pink text-uppercase position-absolute left-0 right-0 top-35 sm-top-25 xs-top-12">Let’s make something beautiful</p>
+                                    <p class="alt-font font-weight-600 text-deep-pink text-uppercase position-absolute left-0 right-0 top-35 sm-top-25 xs-top-12">Motion Graphics</p>
                                 </div>
-                                <h4 class="alt-font text-white">Unlimited power and customization possibilities</h4>
-                                <p class="width-90 xs-width-85 center-col">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-                                    been the industry's standard dummy text ever since. Lorem Ipsum has been the industry.
-                                    Lorem Ipsum has been the industry's standard dummy text since. Lorem Ipsum is simply
-                                    dummy text of the typesetting industry.</p>
-                                <a href="javascript:void(0);" class="btn btn-small btn-white margin-35px-top"> About company</a>
+                                <h4 class="alt-font text-white">Take Your Audience on a Sensory Journey</h4>
+                                <p class="width-90 xs-width-85 center-col" style="font-size: 16px;">Boardroom is a leading technology and digital support company that develops world-class interactive
+                                    and motion-based visual content for its clients. Serving the top tier of the country,
+                                    our expert art directors and graphic designers have helped hundreds of our clients bring
+                                    their imagination to real life.</p>
+                                <a href="index.html" class="btn btn-small btn-white margin-35px-top"> About company</a>
                             </div>
                         </div>
                         <!-- end slider item -->
@@ -255,12 +255,15 @@
                                     <span class="title-large alt-font font-weight-100 text-dark-gray opacity4">02</span>
                                     <p class="alt-font font-weight-600 text-deep-pink text-uppercase position-absolute left-0 right-0 top-35 sm-top-25 xs-top-12">We are digital media agency</p>
                                 </div>
-                                <h4 class="alt-font text-white">We are delivering beautiful digital products for you</h4>
-                                <p class="width-90 xs-width-85 center-col">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-                                    been the industry's standard dummy text ever since. Lorem Ipsum has been the industry.
-                                    Lorem Ipsum has been the industry's standard dummy text since. Lorem Ipsum is simply
-                                    dummy text of the typesetting industry.</p>
-                                <a href="javascript:void(0);" class="btn btn-small btn-white margin-35px-top"> About company</a>
+                                <h4 class="alt-font text-white">Connecting your brand to your audience</h4>
+                                <p class="width-90 xs-width-85 center-col" style="font-size: 15px;">Motion Graphics are used to combine auditory and visual stimuli that get your idea across
+                                    in a compelling and truly unique way.
+                                    <br><br>While words are used to tell a story, bespoke motion-based visual content can truly connect
+                                    with your consumers, partners and stakeholders in a humanistic way. Let the creative
+                                    experts at Boardroom build a connection between your brand and audience with the power
+                                    of both the sound and the picture.
+                                </p>
+                                <a href="index.html" class="btn btn-small btn-white margin-35px-top"> About company</a>
                             </div>
                         </div>
                         <!-- end slider item -->
@@ -271,12 +274,18 @@
                                     <span class="title-large alt-font font-weight-100 text-dark-gray opacity4">03</span>
                                     <p class="alt-font font-weight-600 text-deep-pink text-uppercase position-absolute left-0 right-0 top-35 sm-top-25 xs-top-12">We create designs and technology.</p>
                                 </div>
-                                <h4 class="alt-font text-white">We provide high quality & cost effective services</h4>
-                                <p class="width-90 xs-width-85 center-col">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-                                    been the industry's standard dummy text ever since. Lorem Ipsum has been the industry.
-                                    Lorem Ipsum has been the industry's standard dummy text since. Lorem Ipsum is simply
-                                    dummy text of the typesetting industry.</p>
-                                <a href="javascript:void(0);" class="btn btn-small btn-white margin-35px-top"> About company</a>
+                                <h4 class="alt-font text-white">Boardroom – your technology partner</h4>
+                                <p class="width-90 xs-width-85 center-col" style="font-size: 15px;">We love working with the crème de la crème of Australia and startups that have the potential
+                                    to reach that crust someday. Let us help you in your journey of building your brand,
+                                    enforcing your ideas, and reaching your goals.
+                                    <br><br>With a focus on startups, sustainability and local Australian market, Boardroom works
+                                    to innovate and accelerate your growth by offering you visual content that leaves a strong
+                                    impact on your audience.
+                                    <br><br> Give your viewer something that they could never forget. Let us take your idea from
+                                    your imagination and turn it into an effective statement. Let us increase your visibility
+                                    with the power of new technologies...
+                                </p>
+                                <a href="index.html" class="btn btn-small btn-white margin-35px-top"> About company</a>
                             </div>
                         </div>
                         <!-- end slider item -->
