--- a/html/book-an-event.html
+++ b/html/book-an-event.html
@@ -177,7 +177,7 @@
                                         </li>
 
                                         <li class="dropdown">
-                                            <a class="dropdown-toggle" data-toggle="dropdown" href="Javascript: void(0);">Media Planning & buying</a>
+                                            <a class="dropdown-toggle" data-toggle="dropdown" href="media-planning-buying.html">Media Planning & buying</a>
                                             <!--
                                                 <ul class="dropdown-menu">
                                                     <li><a href="team-simple.html">Team simple</a></li>
