--- a/html/financial-results.html
+++ b/html/financial-results.html
@@ -135,7 +135,7 @@
                                         </li>
 
                                         <li class="dropdown">
-                                            <a class="dropdown-toggle" data-toggle="dropdown" href="Javascript: void(0);">Media Planning & buying</a>
+                                            <a class="dropdown-toggle" data-toggle="dropdown" href="media-planning-buying.html">Media Planning & buying</a>
 
                                         </li>
 
