--- a/html/motion-graphics.html
+++ b/html/motion-graphics.html
@@ -134,7 +134,7 @@
                                         </li>
 
                                         <li class="dropdown">
-                                            <a class="dropdown-toggle" data-toggle="dropdown" href="Javascript: void(0);">Media Planning &amp; buying</a>
+                                            <a class="dropdown-toggle" data-toggle="dropdown" href="media-planning-buying.html">Media Planning &amp; buying</a>
 
                                         </li>
 
