--- a/html/teleconference.html
+++ b/html/teleconference.html
@@ -625,7 +625,7 @@
     </section>
 
     <!-- start parallax section -->
-    <section class="parallax big-section wow fadeIn" data-stellar-background-ratio="0.5" style="background-image: url(&quot;images/img/sssssssssssssss.jpg&quot;); padding-top: 10px; background-position: 0px 97.5938px; visibility: visible; animation-name: fadeIn;">
+    <section class="parallax big-section wow fadeIn" data-stellar-background-ratio="0.5" style="background-image: url(images/img/background_sections.jpg); padding-top: 10px; background-position: 0px 97.5938px; visibility: visible; animation-name: fadeIn;">
         <div class="opacity-extra-medium bg-black"></div>
 
         <div class="col-lg-8 col-md-9 center-col margin-eight-bottom text-center last-paragraph-no-margin">
@@ -1003,7 +1003,7 @@
                     <div class="col-md-4 col-sm-12 col-xs-12 text-center display-table xs-margin-10px-bottom">
                         <div class="display-table-cell vertical-align-middle">
                             <a href="index.html">
-                                <img class="footer-logo" style="max-height: 100px;" src="images/img/53a1dc_26b5ffa1cb7a47b1b716d577935a2046_mv1.png" data-at2x="images/img/53a1dc_26b5ffa1cb7a47b1b716d577935a2046_mv1.png"
+                                <img class="footer-logo" style="max-height: 100px;" src="images/img/board_room_footer_logo.png" data-at2x="images/img/board_room_footer_logo.png"
                                     alt="Boardroom">
                             </a>
                         </div>
